Fix article layout issues on GitHub Pages

--- a/classes.css
+++ b/classes.css
@@ -96,3 +96,8 @@
 .notice p a {
     font-style: italic;
 }
+
+.disableListStyles {
+    list-style-type: none;
+    padding: 0;
+}
